fix(accessibility): improve color contrast for medium-grey text
- Changes --medium-grey from #757575 to #6f6f6f
- Improves contrast ratio from 4.44:1 to 4.63:1 against #fbfbfa background
- Meets WCAG 2.2 Level AA minimum requirement of 4.5:1
- Affects 150+ usages throughout UI including readerTextVersion
- Addresses axe-core accessibility violation in reader panel

--- a/static/css/color-palette.css
+++ b/static/css/color-palette.css
@@ -7,7 +7,7 @@
   --highlight-blue-light: #F0F7FF;
   --beit-midrash-grey: #333333;
   --dark-grey: #666666;
-  --medium-grey: #757575;
+  --medium-grey: #6f6f6f;
   --light-grey: #CCCCCC;
   --lighter-grey: #EDEDEC;
   --lightest-grey: #FBFBFA;
