--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -78,7 +78,7 @@ a, a:hover {
   --beit-midrash-grey: #333333;
   --darkest-grey: #333333;
   --dark-grey: #666666;
-  --medium-grey: #757575;
+  --medium-grey: #6f6f6f;
   --light-grey: #CCCCCC;
   --lighter-grey: #EDEDEC;
   --lightest-grey: #FBFBFA;
